--- a/css/main.css
+++ b/css/main.css
@@ -222,22 +222,28 @@ input ::placeholder {
   margin-bottom: 0;
   padding: 50px 0 15px 10px;
 }
-#restaurants__titre #restaurants {
-  background-color: #F6F6F6;
-  display: flex;
-  flex-direction: column;
-}
 #restaurants__titre #restaurants a {
   color: #000;
 }
 
+#restaurants {
+  background-color: #F6F6F6;
+  display: flex;
+  flex-direction: column;
+  padding: 15px 0;
+}
+
 .article {
+  box-shadow: 4px 4px 5px #ABB0B4;
   background-color: #FFF;
   border-radius: 15px;
   display: flex;
   flex-direction: column;
   height: 298px;
   margin: 15px;
+}
+.article:hover {
+  box-shadow: 10px 10px 20px #343638;
 }
 .article__palette, .article__enchantee, .article__francaise, .article__delice {
   position: relative;
