--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import "utils/utils.scss";
 @import "utils/variables.scss";
 @import "utils/animations.scss";
+@import "utils/mixins.scss";
 @import "pages/pageaccueil.scss";
 @import "pages/pagemenu.scss";
 @import "layout/commun.scss";
