--- a/sass/pages/_pageaccueil.scss
+++ b/sass/pages/_pageaccueil.scss
@@ -123,15 +123,16 @@ input {
     background-color: $background-color;
     margin-bottom: 0;
     padding: 50px 0 15px 10px;
-    #restaurants a {
-        color: #000;
-    }
 }
+
 #restaurants {
     background-color: $background-color;
     display: flex;
     flex-direction: column;
     padding: 15px 0;
+    a {
+        color: #000;
+    }
 }
 
 .article {
@@ -173,16 +174,6 @@ input {
             padding: 0 0 25px 13px;
             @media screen and (min-width: 768px){
                 padding-left: 5px;
-            }
-        }
-        h3 {
-            @media screen and (min-width: 768px) and (max-width: 991px){
-                font-size: 13px;
-            }
-        }
-        p {
-            @media screen and (min-width: 768px) and (max-width: 991px){
-                font-size: 12px;
             }
         }
     }
