--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,7 @@
   width: 180px;
 }
 .card__menu:hover > .menu__choice--price {
-  transform: translateX(-55px);
+  transform: translateX(-50px);
   transition-duration: 300ms;
 }
 .card__menu:hover > .check {
@@ -354,9 +354,6 @@ html {
   transition: transform 500ms ease-in-out;
   white-space: nowrap;
 }
-#restaurants__menu .menu__choice--text h2 {
-  width: auto;
-}
 #restaurants__menu .menu__choice--price {
   align-items: flex-end;
   border-radius: 0 30px 30px 0;
@@ -364,7 +361,6 @@ html {
   font-size: 10px;
   height: 100%;
   position: relative;
-  left: 55px;
   transition: transform 500ms ease-in-out;
 }
 #restaurants__menu .card__ghost {
@@ -440,6 +436,7 @@ html {
 .card__menu--decoration:hover {
   box-shadow: 10px 10px 20px #343638;
   cursor: pointer;
+  padding-left: 15px;
 }
 
 .check {
@@ -451,11 +448,11 @@ html {
   float: right;
   height: 100%;
   justify-content: center;
+  margin-right: -16px;
   position: relative;
-  left: 16px;
   transform: scaleX(0);
   transform-origin: right;
-  transition: transform 400ms;
+  transition: transform 500ms;
   width: 70px;
   z-index: 2;
 }
@@ -466,7 +463,7 @@ html {
   justify-content: center;
   margin-top: 3px;
   overflow: hidden;
-  position: absolute;
+  position: relative;
   transform: rotate(-360deg);
   transition: transform 500ms ease-in-out;
   width: 20px;
