--- a/sass/composants/composants.scss
+++ b/sass/composants/composants.scss
@@ -1,10 +1,7 @@
 .fa-arrow-left {
-    position: relative;
+    position: absolute;
     top: 30px;
-    right: 40px;
-    @media screen and (min-width: 768px){
-        right: 135px;
-    }
+    left: 15px;
 }
 
 .new {
