--- a/css/main.css
+++ b/css/main.css
@@ -253,6 +253,7 @@ input ::placeholder {
   border-radius: 15px 15px 0 0;
   box-shadow: 0px 2px 14px lightgray;
   height: 215px;
+  max-width: 2000px;
   object-fit: cover;
   position: relative;
   width: 100%;
@@ -300,12 +301,14 @@ html {
   background-size: cover;
   height: 300px;
   margin-bottom: 5px;
+  max-width: 2000px;
   object-fit: cover;
   position: relative;
   width: 100%;
 }
 
 #img__francaise {
+  max-width: 2000px;
   position: absolute;
   left: 0;
   top: 78px;
