--- a/sass/pages/_pageaccueil.scss
+++ b/sass/pages/_pageaccueil.scss
@@ -157,6 +157,7 @@ input {
         border-radius: 15px 15px 0 0;
         box-shadow: 0px 2px 14px lightgray;
         height: 215px;
+        max-width: 2000px;
         object-fit: cover;
         position: relative;
         width: 100%;
