--- a/css/main.css
+++ b/css/main.css
@@ -339,10 +339,20 @@ html {
   padding-bottom: 50px;
   max-width: 100%;
 }
+@media screen and (min-width: 992px) {
+  #restaurants__menu {
+    flex-direction: unset;
+  }
+}
 #restaurants__menu .menu__choice {
   align-items: flex-end;
   height: auto;
   justify-items: center;
+}
+@media screen and (min-width: 992px) {
+  #restaurants__menu .menu__choice {
+    width: 33%;
+  }
 }
 #restaurants__menu .menu__choice__enchantee {
   padding-bottom: 15px;
