--- a/sass/pages/_pageaccueil.scss
+++ b/sass/pages/_pageaccueil.scss
@@ -43,8 +43,9 @@ input {
     h1 {
         font-size: 15px;
     }
-    p {
+    h4 {
         color: $dark-color;
+        font-weight: lighter;
     }
 }
 
