--- a/css/main.css
+++ b/css/main.css
@@ -223,12 +223,23 @@ input ::placeholder {
   margin-bottom: 0;
   padding: 50px 0 15px 10px;
 }
+@media screen and (min-width: 992px) {
+  #restaurants__titre {
+    padding: 30px 0 0 10px;
+  }
+}
 
 #restaurants {
   background-color: #F6F6F6;
   display: flex;
   flex-direction: column;
   padding: 15px 0;
+}
+@media screen and (min-width: 992px) {
+  #restaurants {
+    flex-direction: unset;
+    justify-content: space-evenly;
+  }
 }
 #restaurants a {
   color: #000;
