--- a/sass/pages/_pageaccueil.scss
+++ b/sass/pages/_pageaccueil.scss
@@ -124,6 +124,9 @@ input {
     background-color: $background-color;
     margin-bottom: 0;
     padding: 50px 0 15px 10px;
+    @media screen and (min-width: 992px){
+        padding: 30px 0 0 10px;
+    }
 }
 
 #restaurants {
@@ -131,6 +134,10 @@ input {
     display: flex;
     flex-direction: column;
     padding: 15px 0;
+    @media screen and (min-width: 992px){
+        flex-direction: unset;
+        justify-content: space-evenly;
+    }
     a {
         color: #000;
     }
