--- a/sass/pages/_pagemenu.scss
+++ b/sass/pages/_pagemenu.scss
@@ -65,14 +65,14 @@ html {
     height: auto;
     padding-bottom: 50px;
     max-width: 100%;
-    @media screen and (min-width: 992px){
+    @media screen and (min-width: 768px){
         flex-direction: unset;
     }
     .menu__choice {
         align-items: flex-end;
         height: auto;
         justify-items: center;
-        @media screen and (min-width: 992px){
+        @media screen and (min-width: 768px){
             width: 33%;
         }
         &__enchantee {
@@ -124,33 +124,22 @@ html {
 .textone {
     line-height: 22px;
     padding-right: 2px;
-    width: 100%;
+    width: auto;
     &__title {
-        font-size: 10px;
+        font-size: 11.5px;
         margin: 0;
         overflow: hidden;
         position: relative;
         text-overflow: ellipsis;
         white-space: nowrap;
-        width: 150px;
-        @media screen and (min-width: 768px){
-            width: auto;
-        }
     }
     &__description {
-        font-size: 10px;
+        font-size: 11.5px;
         margin: 0;
         overflow: hidden;
         position: relative;
         text-overflow: ellipsis;
         white-space: nowrap;
-        width: 150px;
-        @media screen and (min-width: 768px){
-            width: auto;
-        }
-        p {
-            width: auto;
-        }
     }
 }
 
@@ -159,7 +148,7 @@ html {
     border-radius: 15px;
     display: flex;
     height: 66px;
-    justify-content: flex-start;
+    justify-content: space-between;
     margin: 13px;
     padding: 0 6px;
     position: relative;
@@ -186,10 +175,11 @@ html {
     justify-content: center;
     margin-right: -16px;
     position: relative;
+    left: -9px;
     transform: scaleX(0);
     transform-origin: right;
     transition: transform 800ms;
-    width: 60px;
+    width: 56px;
     z-index: 2;
     &__animation {
         @extend %flex-center;
