--- a/sass/utils/animations.scss
+++ b/sass/utils/animations.scss
@@ -10,7 +10,7 @@
 .loading {
     align-items: center;
     animation: loading $animation-duree $loading-duree ease-in-out forwards;
-    background-color: rgba(246, 246, 246, 0.5);
+    background-color: #FFF;
     display: flex;
     height: 100%;
     justify-content: center;
@@ -78,11 +78,10 @@
 
 .card__menu {
     &:hover >.menu__choice--text {
-        width: 180px;
+        width: 135px;
     }
     &:hover > .menu__choice--price {
-        transform: translateX(-55px);
-        transition-duration: 1ms;
+        transform: translateX(-60px);
     }
     &:hover > .check {
         transform: scaleX(1);
