HTML max-width 1440px 12/12

--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,10 @@ a {
   text-decoration: none;
 }
 
+html {
+  max-width: 1440px;
+}
+
 #location {
   background-color: #EAEAEA;
   display: flex;
@@ -296,6 +300,7 @@ a {
 }
 
 html {
+  max-width: 1440px;
   overflow-x: hidden;
 }
 
@@ -317,7 +322,7 @@ html {
 }
 
 #img__francaise {
-  max-width: 2000px;
+  max-width: 1440px;
   position: absolute;
   left: 0;
   top: 78px;
@@ -331,6 +336,7 @@ html {
   border-top-right-radius: 35px;
   display: flex;
   justify-content: space-between;
+  max-width: 1440px;
   position: absolute;
   width: 100%;
 }
