--- a/sass/pages/_pagemenu.scss
+++ b/sass/pages/_pagemenu.scss
@@ -10,6 +10,7 @@ a {
 }
 
 html {
+    margin: auto;
     max-width: 1440px;
     overflow-x: hidden;
 }
@@ -21,7 +22,11 @@ html {
     display: flex;
     height: 300px;
     justify-content: center;
+    max-width: 1440px;
     width: 100%;
+    div:first-child {
+        width: 100%;
+    }
     img {
         background-size: cover;
         height: 300px;
@@ -34,10 +39,8 @@ html {
 }
 
 #img__francaise {
-    max-width: 1440px;
-    position: absolute;
-    left: 0;
-    top: 78px;
+    margin: auto;
+    position: relative;
     width: 100%;
 }
 
@@ -48,6 +51,7 @@ html {
     border-top-right-radius: 35px;
     display: flex;
     justify-content: space-between;
+    margin: auto;
     max-width: 1440px;
     position: absolute;
     width: 100%;
