--- a/css/main.css
+++ b/css/main.css
@@ -221,8 +221,13 @@ input ::placeholder {
   color: #9356DC;
 }
 
-#restaurants__titre {
+.restaurants__section {
   background-color: #F6F6F6;
+  display: flex;
+  flex-direction: column;
+}
+
+#restaurants__titre {
   margin-bottom: 0;
   padding: 50px 0 15px 10px;
 }
@@ -328,8 +333,6 @@ html {
 
 #img__francaise {
   margin: auto;
-  position: relative;
-  width: 100%;
 }
 
 .restaurantcontainer__title {
@@ -498,7 +501,7 @@ html {
 
 .header {
   background-color: #FFF;
-  box-shadow: 0px 2px 5px lightgray;
+  box-shadow: 0 2px 0 lightgray;
   display: flex;
   justify-content: center;
   position: relative;
