--- a/sass/layout/commun.scss
+++ b/sass/layout/commun.scss
@@ -2,7 +2,7 @@
 
 .header {
     background-color: #FFF;
-    box-shadow: 0px 2px 5px lightgray;
+    box-shadow: 0 2px 0 lightgray;
     display: flex;
     justify-content: center;
     position: relative;
