--- a/sass/pages/_pageaccueil.scss
+++ b/sass/pages/_pageaccueil.scss
@@ -124,8 +124,13 @@ input {
 
 // Restaurants
 
-#restaurants__titre {
+.restaurants__section {
     background-color: $background-color;
+    display: flex;
+    flex-direction: column;
+}
+
+#restaurants__titre {
     margin-bottom: 0;
     padding: 50px 0 15px 10px;
     @media screen and (min-width: 992px){
