--- a/sass/composants/composants.scss
+++ b/sass/composants/composants.scss
@@ -14,6 +14,7 @@
     right: 20px;
     top: 20px;
     width: 73px;
+    z-index: 1;
     @media screen and (min-width: 768px){
         right: 10px;
     }
